renamed allteilmenge, added %matplotlib inline to matplotlib snippet

--- a/Permutations with Inversion Vectors.ipynb
+++ b/Permutations with Inversion Vectors.ipynb
@@ -129,7 +129,7 @@
    },
    "outputs": [],
    "source": [
-    "def nextIV(curr_iv, min_idx): #counts only up to the min_idx, if min_idx == 1 (we generate all possible IV)\n",
+    "def nextIV(curr_iv, min_idx = 1): #counts only up to the min_idx, if min_idx == 1 (we generate all possible IV)\n",
     "    max_idx = 0\n",
     "    next_iv = []\n",
     "    for idx , val in enumerate(curr_iv):\n",
@@ -435,6 +435,142 @@
     "for p in permutationsOf([1,2,3], init_iv = [0,1,0]): # setting init_iv[1] = 1, \n",
     "                                                     # generates the other half of the permutations  \n",
     "    print p,"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 2, 3]\n"
+     ]
+    }
+   ],
+   "source": [
+    "perm_generator = permutationsOf([1,2,3], min_idx = 2)\n",
+    "print next(perm_generator)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 3, 2]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print next(perm_generator)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[2, 3, 1]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print next(perm_generator)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "def safe_next(iterable):\n",
+    "    try:\n",
+    "        nxt = next(iterable)\n",
+    "    except StopIteration:\n",
+    "        return None\n",
+    "    return nxt"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "None\n"
+     ]
+    }
+   ],
+   "source": [
+    "print safe_next(perm_generator) #returns none instead of raising StopIteration"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[2, 1, 3]\n"
+     ]
+    }
+   ],
+   "source": [
+    "new_generator = permutationsOf([1,2,3], init_iv = [0,1,0])\n",
+    "print safe_next(new_generator)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[3, 1, 2]\n",
+      "[3, 2, 1]\n",
+      "None\n"
+     ]
+    }
+   ],
+   "source": [
+    "print safe_next(new_generator)\n",
+    "print safe_next(new_generator)\n",
+    "print safe_next(new_generator)"
    ]
   },
   {
