added drawing a hanoi tower with matplotlib

--- a/matplotlib_inline.ipynb
+++ b/matplotlib_inline.ipynb
@@ -109,6 +109,86 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.3079825 0.6\n"
+     ]
+    },
+    {
+     "data": {
+      "image/png": "iVBORw0KGgoAAAANSUhEUgAAAQkAAAEACAYAAACgZ4OsAAAABHNCSVQICAgIfAhkiAAAAAlwSFlz\nAAALEgAACxIB0t1+/AAADXxJREFUeJzt3V+o3Gedx/H3J2YbWKmFWjgHU5tAq3QrVhHN5qKwY7ts\nT72JeLNtQbEg5GIj3lm9kJ4LwfVO3K6WQKh4IRHsXmRdxRbpIN1tNULb1DVpUncbk7Q5Uv+BQiGG\n717MtJ2d5jwzJ5k/Z07fLxiY38wzv/lkMvPJ7/eck2dSVUjSerbNO4Ckzc2SkNRkSUhqsiQkNVkS\nkposCUlNI0siyaEka0mONcZ8PcmpJM8k+eBkI0qap3GOJB4G7lzvziR3ATdW1XuA/cBDE8omaRMY\nWRJV9QTw+8aQfcC3+2N/ClyTZGky8STN2yTmJHYCZwa2z/Vvk7QFOHEpqWn7BPZxDnj3wPb1/dve\nJIn/UUSak6rK5Txu3COJ9C+XcgT4FECSvcAfqmptvR1V1UJdHnjggbln2Mp5zTyby5UYeSSR5DtA\nB3hnkl8DDwBX9T7vdbCqfpDkY0leAP4M3HdFiSRtKiNLoqruHWPMgcnEkbTZOHE5QqfTmXeEDVm0\nvGDmzS5Xer6yoSdLapbPJ6knCTXliUtJb1GWhKQmS0JSkyUhqcmSkNRkSUhqsiQkNVkSkposCUlN\nloSkJktCUpMlIanJkpDUZElIarIkJDVZEpKaLAlJTZaEpCZLQlKTJSGpyZKQ1GRJSGqyJCQ1WRKS\nmiwJSU2WhKQmS0JSkyUhqcmSkNRkSUhqsiQkNVkSkposCUlNloSkprFKIslKkhNJTia5/xL3vyPJ\nkSTPJHkuyacnnlTSXKSq2gOSbcBJ4A7gJeAocHdVnRgY80XgHVX1xSTXAc8DS1X1l6F91ajnkzR5\nSaiqXM5jxzmS2AOcqqrTVXUBOAzsGxpTwNX961cDvx0uCEmLaZyS2AmcGdg+279t0IPALUleAp4F\nPjeZeJLmbfuE9nMn8HRV3Z7kRuCxJLdW1Z+GB66urr5+vdPp0Ol0JhRh8S0v72Zt7fSGHrO0tIvz\n51+cTiAtrG63S7fbnci+xpmT2AusVtVKf/sLQFXVVwfGfB/4SlX9Z3/7x8D9VfXzoX05J9GQhN6Z\n24Yeha+pRpn2nMRR4KYku5JcBdwNHBkacxr4+36YJeC9wP9cTiBJm8vI042qupjkAPAovVI5VFXH\nk+zv3V0HgS8D30pyrP+wz1fV76aWWtLMjDzdmOiTebrR5OmGpmXapxuS3sIsCUlNloSkJktCUpMl\nIanJkpDUZElIarIkJDVZEpKaLAlJTZaEpCZLQlKTJSGpyZKQ1GRJSGqyJCQ1WRKSmiwJSU2WxJwt\nL+8mSX/puh1ANnjZ8frjl5d3z+FPoK3ONS7n7PLWtVx3b653qUtyjUtJU2NJSGqyJCQ1WRKSmiwJ\nSU2WhKQmS0JSkyUhqcmSkNRkSUhqsiQkNVkSkposCUlNloSkJktCUtNYJZFkJcmJJCeT3L/OmE6S\np5P8Isnjk40paV5GLjqTZBtwErgDeAk4CtxdVScGxlwD/BfwD1V1Lsl1VfXKJfblojNDXHRGszDt\nRWf2AKeq6nRVXQAOA/uGxtwLPFJV5wAuVRCSFtM4JbETODOwfbZ/26D3AtcmeTzJ0SSfnFRASfO1\nfYL7+RBwO/B24MkkT1bVCxPav6Q5GackzgE3DGxf379t0Fnglap6FXg1yU+ADwBvKonV1dXXr3c6\nHTqdzsYSL7jl5d2srZ0euOW1FbInYUd/jqNnaWkX58+/OKF9a5F0u1263e5E9jXOxOXbgOfpTVy+\nDPwMuKeqjg+MuRn4F2CF3rv+p8A/VtUvh/b1lp+4nOxE5chncyJTwJVNXI48kqiqi0kOAI/Sm8M4\nVFXHk+zv3V0Hq+pEkh8Bx4CLwMHhgpC0mPzejRnzSELz4PduSJoaS0JSkyUhqcmSkNRkSUhqsiQk\nNVkSkposCUlNloSkJktCUpMlIanJkpDUZElIarIkJDVZEpKaLAlJTZaEpCZLQlKTJTEly8u7SfKm\nyxurY8/isuNNz7+8vHsmf35tHa5xOSWzXctyI1z38q3INS4lTY0lIanJkpDUZElIarIkJDVZEpKa\nLAlJTZaEpCZLQlKTJSGpyZKQ1GRJSGqyJCQ1WRKSmiwJSU2WhKSmsUoiyUqSE0lOJrm/Me4jSS4k\n+cTkIkqap5ElkWQb8CBwJ/A+4J4kN68z7p+BH006pKT5GedIYg9wqqpOV9UF4DCw7xLjPgt8D/jN\nBPNJmrNxSmIncGZg+2z/ttcleRfw8ar6Jr0VWCVtEZOauPwaMDhXYVFIW8T2McacA24Y2L6+f9ug\nDwOH01si+jrgriQXqurI8M5WV1dfv97pdOh0OhuMvDksL+9mbe10Y8RrS+dvNjv6K3mvb2lpF+fP\nvzibOJqKbrdLt9udyL5GLqmf5G3A88AdwMvAz4B7qur4OuMfBv69qv7tEvdtmSX1N++S+ZPgsvtb\nzZUsqT/ySKKqLiY5ADxK7/TkUFUdT7K/d3cdHH7I5QSRtDn55TyXySMJLRK/nEfS1FgSkposCUlN\nloSkJktCUpMlIanJkpDUZElIarIkJDVZEpKaLAlJTZaEpCZLQlKTJSGpyZKQ1GRJSGqyJCQ1WRKS\nmiyJvuXl3SQZ+/LGathb8bJj7NdheXn3xP4OtDm5xmXf1l6zcppcD3MRuMalpKmxJCQ1WRKSmiwJ\nSU2WhKQmS0JSkyUhqcmSkNRkSUhqsiQkNVkSkposCUlNloSkJktCUpMlIanJkpDUNFZJJFlJciLJ\nyST3X+L+e5M82788keT9k48qaR5GrkyVZBtwErgDeAk4CtxdVScGxuwFjlfVH5OsAKtVtfcS+3Jl\nqi3HlakWwbRXptoDnKqq01V1ATgM7BscUFVPVdUf+5tPATsvJ4ykzWecktgJnBnYPku7BD4D/PBK\nQknaPLZPcmdJPgrcB9y23pjV1dXXr3c6HTqdzkSee3l5N2trp69gD6+tfq2N2dE/Vbt8S0u7OH/+\nxcnEEQDdbpdutzuRfY0zJ7GX3hzDSn/7C0BV1VeHxt0KPAKsVNWv1tnX1OYknFNYZM5rTNu05ySO\nAjcl2ZXkKuBu4MhQgBvoFcQn1ysISYtp5OlGVV1McgB4lF6pHKqq40n29+6ug8CXgGuBb6T3T/qF\nqtozzeCSZmPLfDmPpxuLzNONafPLeSRNjSUhqcmSkNRkSUhqsiQkNVkSkposCUlNloSkJktCUpMl\nIanJkpDUZElIarIkJDVZEpKaLAlJTZaEpCZLQlLTRFfLnqelpV2srbna9SJaWto17whq2DLL10la\nn8vXSZoaS0JSkyUhqcmSkNRkSUhqsiQkNVkSkposCUlNloSkJktCUpMlIanJkpDUZElIarIkJDVZ\nEpKaLAlJTWOVRJKVJCeSnExy/zpjvp7kVJJnknxwsjElzcvIkkiyDXgQuBN4H3BPkpuHxtwF3FhV\n7wH2Aw9NIetcdLvdeUfYkEXLC2be7MY5ktgDnKqq01V1ATgM7Bsasw/4NkBV/RS4JsnSRJPOyaK9\nGRYtL5h5sxunJHYCZwa2z/Zva405d4kxkhaQE5eSmkaulp1kL7BaVSv97S8AVVVfHRjzEPB4VX23\nv30C+LuqWhval0tlS3Nyuatlj/O9G0eBm5LsAl4G7gbuGRpzBPgn4Lv9UvnDcEFcSUhJ8zOyJKrq\nYpIDwKP0Tk8OVdXxJPt7d9fBqvpBko8leQH4M3DfdGNLmpWZfjmPpMUzlYnLRfvlq1F5k9yb5Nn+\n5Ykk759HzqFMI1/j/riPJLmQ5BOzzLdOlnHeF50kTyf5RZLHZ51xKMuo98U7khzpv4efS/LpOcQc\nznQoyVqSY40xG/vsVdVEL/SK5wVgF/BXwDPAzUNj7gL+o3/9b4GnJp1jwnn3Atf0r6/MM++4mQfG\n/Rj4PvCJzZ4ZuAb4b2Bnf/u6TZ73i8BXXssK/BbYPufX+Tbgg8Cxde7f8GdvGkcSi/bLVyPzVtVT\nVfXH/uZTzP93QMZ5jQE+C3wP+M0sw61jnMz3Ao9U1TmAqnplxhkHjZO3gKv7168GfltVf5lhxjep\nqieA3zeGbPizN42SWLRfvhon76DPAD+caqLRRmZO8i7g41X1TWAz/FRpnNf5vcC1SR5PcjTJJ2eW\n7s3GyfsgcEuSl4Bngc/NKNuV2PBnb5wfgaovyUfp/eTmtnlnGcPXgMHz6M1QFKNsBz4E3A68HXgy\nyZNV9cJ8Y63rTuDpqro9yY3AY0lurao/zTvYJE2jJM4BNwxsX9+/bXjMu0eMmZVx8pLkVuAgsFJV\nrcO5WRgn84eBw0lC73z5riQXqurIjDIOGyfzWeCVqnoVeDXJT4AP0JsbmLVx8t4HfAWgqn6V5H+B\nm4GfzyTh5dn4Z28KEydv440Jn6voTfj8zdCYj/HG5Mle5jtxOU7eG4BTwN55TkptJPPQ+IeZ/8Tl\nOK/zzcBj/bF/DTwH3LKJ8/4r8ED/+hK9w/hrN8H7Yzfw3Dr3bfizN/EjiVqwX74aJy/wJeBa4Bv9\nf5kvVNWeTZ75/z1k5iGHA4z3vjiR5EfAMeAicLCqfrlZ8wJfBr418OPGz1fV7+aR9zVJvgN0gHcm\n+TXwAL2Su+zPnr9MJanJ/wUqqcmSkNRkSUhqsiQkNVkSkposCUlNloSkJktCUtP/AeLB5vW9nMvd\nAAAAAElFTkSuQmCC\n",
+      "text/plain": [
+       "<matplotlib.figure.Figure at 0x7f95c9306390>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "%matplotlib inline\n",
+    "\n",
+    "import matplotlib.pyplot as plt\n",
+    "import matplotlib.patches as patches\n",
+    "\n",
+    "fig1 = plt.figure()\n",
+    "ax1 = fig1.add_subplot(111, aspect='equal')\n",
+    "w1 = 0.5\n",
+    "h1 = 0.1\n",
+    "x1 = 0.1\n",
+    "y1 = 0.1\n",
+    "\n",
+    "class hanoi_piece():\n",
+    "    def __init__(self, w , h, x , y):\n",
+    "        self.w = w\n",
+    "        self.h = h\n",
+    "        self.x = x\n",
+    "        self.y = y\n",
+    "        \n",
+    "def rect(w,h,x = 0.1, y = 0.1):\n",
+    "    ax1.add_patch(\n",
+    "    patches.Rectangle((x, y), w, h,))\n",
+    "\n",
+    "\n",
+    "def hanoi_init():\n",
+    "    rect(w = w1, h = h1, x = x1, y = y1)\n",
+    "    return hanoi_piece(w1,h1,x1,y1)\n",
+    "\n",
+    "def hanoi_add():\n",
+    "    global w1\n",
+    "    global h1\n",
+    "    global y1\n",
+    "    global x1\n",
+    "    w2 = 0.7 * w1\n",
+    "    h2 = h1\n",
+    "    y2 = y1 + h1\n",
+    "    x2 = x1 + (w1/2.0) - (w2/2.0)\n",
+    "    rect(w2, h1, x = x2, y = y2)\n",
+    "    w1 = w2\n",
+    "    h1 = h2\n",
+    "    x1 = x2\n",
+    "    y1 = y2\n",
+    "    return hanoi_piece(w2,h2,x2,y2)\n",
+    "def make_hanoi(num_pieces):\n",
+    "    pieces = []\n",
+    "    pieces.append(hanoi_init())\n",
+    "    for i in range(num_pieces - 1):\n",
+    "        pieces.append(hanoi_add())\n",
+    "    return pieces\n",
+    "\n",
+    "pieces_lst = make_hanoi(7)\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {
     "collapsed": true
