added examples using ipywidget interact

--- a/iv-permutations.ipynb
+++ b/iv-permutations.ipynb
@@ -286,25 +286,6 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[1, 3, 2, 4, 5]\n"
-     ]
-    }
-   ],
-   "source": [
-    "print getPermutation([1,2,3,4,5], [0,0,1,0,0])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 14,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
       "[5, 4, 3, 2, 1]\n"
      ]
     }
@@ -315,7 +296,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 14,
    "metadata": {
     "collapsed": false
    },
@@ -334,7 +315,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 43,
    "metadata": {
     "collapsed": false
    },
@@ -346,9 +327,11 @@
     "    curr_iv = init_iv\n",
     "    next_iv = nextIV(curr_iv, min_idx)\n",
     "    curr_p = getPermutation(to_permutate, init_iv) # initial permutation is the original\n",
+    "    print init_iv,\n",
     "    yield curr_p #first permutation of the list\n",
     "    next_p = getPermutation(curr_p, next_iv)\n",
     "    while(curr_iv != next_iv):\n",
+    "        print next_iv,\n",
     "        yield next_p\n",
     "        curr_p = next_p\n",
     "        curr_iv = next_iv\n",
@@ -358,7 +341,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 16,
    "metadata": {
     "collapsed": false
    },
@@ -378,7 +361,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 17,
    "metadata": {
     "collapsed": false
    },
@@ -398,7 +381,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 18,
    "metadata": {
     "collapsed": false
    },
@@ -418,7 +401,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 19,
    "metadata": {
     "collapsed": false
    },
@@ -439,7 +422,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 20,
    "metadata": {
     "collapsed": false
    },
@@ -459,7 +442,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 21,
    "metadata": {
     "collapsed": false
    },
@@ -478,7 +461,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 22,
    "metadata": {
     "collapsed": false
    },
@@ -497,7 +480,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 23,
    "metadata": {
     "collapsed": true
    },
@@ -513,7 +496,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 24,
    "metadata": {
     "collapsed": false
    },
@@ -532,7 +515,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 25,
    "metadata": {
     "collapsed": false
    },
@@ -552,7 +535,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 26,
    "metadata": {
     "collapsed": false
    },
@@ -571,6 +554,167 @@
     "print safe_next(new_generator)\n",
     "print safe_next(new_generator)\n",
     "print safe_next(new_generator)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "metadata": {
+    "collapsed": false,
+    "scrolled": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "__first half__\n",
+      "[0, 0, 0, 0] [0, 0, 1, 3]  \n",
+      "[0, 0, 0, 1] [0, 0, 3, 1]  \n",
+      "[0, 0, 0, 2] [0, 1, 3, 0]  \n",
+      "[0, 0, 0, 3] [0, 1, 3, 0]  \n",
+      "[0, 0, 1, 0] [0, 1, 0, 3]  \n",
+      "[0, 0, 1, 1] [0, 3, 0, 1]  \n",
+      "[0, 0, 1, 2] [0, 3, 1, 0]  \n",
+      "[0, 0, 1, 3] [0, 3, 1, 0]  \n",
+      "[0, 0, 2, 0] [0, 1, 0, 3]  \n",
+      "[0, 0, 2, 1] [0, 3, 0, 1]  \n",
+      "[0, 0, 2, 2] [1, 3, 0, 0]  \n",
+      "[0, 0, 2, 3] [1, 3, 0, 0]  \n",
+      "\n",
+      "__other half__\n",
+      "[0, 1, 0, 0] [0, 0, 1, 3]  \n",
+      "[0, 1, 0, 1] [0, 0, 3, 1]  \n",
+      "[0, 1, 0, 2] [1, 0, 3, 0]  \n",
+      "[0, 1, 0, 3] [1, 0, 3, 0]  \n",
+      "[0, 1, 1, 0] [1, 0, 0, 3]  \n",
+      "[0, 1, 1, 1] [3, 0, 0, 1]  \n",
+      "[0, 1, 1, 2] [3, 0, 1, 0]  \n",
+      "[0, 1, 1, 3] [3, 0, 1, 0]  \n",
+      "[0, 1, 2, 0] [1, 0, 0, 3]  \n",
+      "[0, 1, 2, 1] [3, 0, 0, 1]  \n",
+      "[0, 1, 2, 2] [3, 1, 0, 0]  \n",
+      "[0, 1, 2, 3] [3, 1, 0, 0]  \n",
+      "We generated  12  distinct elements out of  24\n"
+     ]
+    }
+   ],
+   "source": [
+    "to_permutate = [0, 1, 0, 3]\n",
+    "inputs = [(to_permutate, 2, [0, 0, 0, 0]), (to_permutate, 1, [0, 1, 0, 0] )]  #passing tuples as arguments\n",
+    "generators = [permutationsOf(*args) for args in inputs] #creating a list of generators\n",
+    "half1 = set()\n",
+    "half2 = set()\n",
+    "print \"__first half__\"\n",
+    "for p in generators[0]:\n",
+    "    print  p, \" \"\n",
+    "    half1.add(tuple(p))\n",
+    "print \"\\n__other half__\"\n",
+    "for p in generators[1]:\n",
+    "    print p, \" \"\n",
+    "    half2.add(tuple(p))\n",
+    "\n",
+    "from math import factorial \n",
+    "print \"We generated \", len(half1 | half2), \" distinct elements out of \", factorial(len(to_permutate))\n",
+    "    \n",
+    "#maybe keep a cache to eliminate the repeated entries"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "#Narayana method for permutations with lexicographical order\n",
+    "#Find the largest index k such that a[k] < a[k + 1]. If no such index exists, the permutation is the last permutation.\n",
+    "#Find the largest index l greater than k such that a[k] < a[l].\n",
+    "#Swap the value of a[k] with that of a[l].\n",
+    "#Reverse the sequence from a[k + 1] up to and including the final element a[n].\n",
+    "def nay_permutation(input_list): \n",
+    "    k = -1\n",
+    "    old_k = -1\n",
+    "    l = -1\n",
+    "    old_l = -1\n",
+    "    to_permutate = list(input_list)\n",
+    "    permutations_available = True\n",
+    "    while permutations_available:\n",
+    "        for idx, val in enumerate(to_permutate):\n",
+    "            if(idx < len(to_permutate) - 1):\n",
+    "                if(val < to_permutate[idx + 1]):\n",
+    "                    k = idx\n",
+    "        if(k == old_k): #no index found, no new permutations\n",
+    "            print \"No new permutations available\"\n",
+    "            permutations_available = False\n",
+    "        else:\n",
+    "            old_k = k\n",
+    "            for i in range(k + 1, len(to_permutate)):\n",
+    "                if(to_permutate[i] > to_permutate[k]):\n",
+    "                    l = i\n",
+    "            if(l != old_l):\n",
+    "                to_permutate[l], to_permutate[k] = to_permutate[l], to_permutate[k] #in place permutation\n",
+    "                old_l = l\n",
+    "            if(k < len(to_permutate) - 1):\n",
+    "                to_permutate = to_permutate[0: k + 1] + to_permutate[-1: k  :-1] #reversing all elements after index k\n",
+    "            yield to_permutate\n",
+    "    \n",
+    "            \n",
+    "   \n",
+    "        \n",
+    "        "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[4, 2, 3, 24, 15, 13, 8, 9, 6]\n"
+     ]
+    }
+   ],
+   "source": [
+    "array_ = [4,2,3,6,9,8,13,15,24]\n",
+    "k = 2\n",
+    "#reversing all elements after index k\n",
+    "print array_[0: k + 1] + array_[-1: k  :-1]\n",
+    " "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[4, 2, 3, 6, 8, 9]\n",
+      "[4, 2, 3, 6, 8, 9]\n",
+      "No new permutations available\n"
+     ]
+    }
+   ],
+   "source": [
+    "curr = [4,2,3,6,9,8] #debug later, buggy implementation\n",
+    "i = 0\n",
+    "for p in nay_permutation(curr):\n",
+    "    print p\n",
+    "    i = i + 1\n",
+    "    if(i == 10):\n",
+    "        break\n",
+    "    "
    ]
   },
   {
